# ShaderMath

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs  math.rs  tests.rs
src/math/: float2.rs  float3.rs  float4.rs
src/tests/: float2.rs  float3.rs  float4.rs
