[package]
name = "shadermath"
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Henry de Jongh"]
keywords = ["hlsl", "glsl", "math", "shader", "gamedev"]
categories = ["mathematics", "game-development"]
description = "HLSL inspired mathematics library for Rust"
repository = "https://github.com/Henry00IS/ShaderMath"

[dependencies]
